--- a/en-US.html
+++ b/en-US.html
@@ -1,9 +1,7 @@
-
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from avalon.in.ua/en-US by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:32:48 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -153,7 +151,7 @@ The company offers a range of logistics services for the transportation of all t
                     <div id="coordinant-icon">
                         <img src="Images/coordinat_icon.png" height="20" width="20" id="coordinat-icon-coordinat" />
                     </div>
-                    <div id="adress">1A, Sportivna sq. Tower A, Kyiv, Ukraine 01601</div>
+                    <div id="adress"><a href="https://goo.gl/maps/HQKamagVqnfxVAt89" target="_blank" rel="noopener noreferrer">1A, Sportivna sq. Tower A, Kyiv, Ukraine 01601</a></div>
                 </div>
 
 
@@ -162,16 +160,17 @@ The company offers a range of logistics services for the transportation of all t
                     <div id="mail-icon">
                         <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                     </div>
-                    <div id="mail-adress">info@avalon.in.ua       /   
-Avalonffc@gmail.com  </div>
+                    <div id="mail-adress"><a href="mailto:info@avalon.in.ua?subject=Logistic">info@avalon.in.ua</a>
+					<br><a href="mailto:avalonffc@gmail.com?subject=Logistic">avalonffc@gmail.com</a>
+					</div>
                 </div>
 
 
-                <div id="phone">
+				<div id="phone">
                     <div id="phone-icon">
                         <img src="Images/telephone-icon.png" height="20" width="20" id="phone-icon-phone" />
                     </div>
-                    <div id="phone-number">Tel: +380 (44) 500-95-25 </div>
+                    <div id="phone-number"><a href="tel:+380445009525">+380 (44) 500-95-25 </a></div>
                 </div>
 
             </div>
@@ -181,87 +180,6 @@ Avalonffc@gmail.com  </div>
 
 
         </div>
-        <!-- moscow -->
-
-        <div class="col-md-4">
-            <div class="mycontacts">
-
-                <div id="contact-title">
-                    <div id="book-icon">
-                        <img src="Images/adress%20book%20icon.png" height="20" width="20" id="book-icon-book" />
-                    </div>
-                    <div id="contact-city">MOSCOW</div>
-                </div>
-
-                <div id="coordinat">
-                    <div id="coordinant-icon">
-                        <img src="Images/coordinat_icon.png" height="20" width="20" id="coordinat-icon-coordinat" />
-                    </div>
-                    <div id="adress">Quay Semenovskaya, 2/1 Moscow, 105094 </div>
-                </div>
-
-
-
-                <div id="mail">
-                    <div id="mail-icon">
-                        <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
-                    </div>
-                    <div id="mail-adress">Avalonffc@gmail.com </div>
-                </div>
-
-
-                <div id="phone">
-                    <div id="phone-icon">
-                        <img src="Images/telephone-icon.png" height="20" width="20" id="phone-icon-phone" />
-                    </div>
-                    <div id="phone-number">+7 (495) 505-63-07 </div>
-                </div>
-
-
-            </div>
-
-
-        </div>
-
-        <!-- london -->
-
-        <div class="col-md-4">
-            <div class="mycontacts">
-
-                <div id="contact-title">
-                    <div id="book-icon">
-                        <img src="Images/adress%20book%20icon.png" height="20" width="20" id="book-icon-book" />
-                    </div>
-                    <div id="contact-city">LONDON</div>
-                </div>
-                <div id="coordinat">
-                    <div id="coordinant-icon">
-                        <img src="Images/coordinat_icon.png" height="20" width="20" id="coordinat-icon-coordinat" />
-                    </div>
-                    <div id="adress">Limehouse Court, 3-11 Dod Street London E14 7EQ </div>
-                </div>
-
-
-
-                <div id="mail">
-                    <div id="mail-icon">
-                        <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
-                    </div>
-                    <div id="mail-adress">Avalonffc@gmail.com </div>
-                </div>
-
-
-                <div id="phone">
-                    <div id="phone-icon">
-                        <img src="Images/telephone-icon.png" height="20" width="20" id="phone-icon-phone" />
-                    </div>
-                    <div id="phone-number">+44 (0)20 7043 9721 </div>
-                </div>
-            </div>
-
-
-        </div>
-
     </div>
 
 
@@ -384,7 +302,7 @@ Avalonffc@gmail.com  </div>
                         <div id="coordinant-icon">
                             <img src="Images/coordinat_icon.png" height="20" width="20" id="coordinat-icon-coordinat" />
                         </div>
-                        <div class="adress-bottom">1A, Sportivna sq. Tower A, Kyiv, Ukraine 01601 </div>
+                        <div class="adress-bottom"><a href="https://goo.gl/maps/HQKamagVqnfxVAt89" target="_blank" rel="noopener noreferrer">1A, Sportivna sq. Tower A, Kyiv, Ukraine 01601</a></div>
                     </div>
 
 
@@ -396,8 +314,9 @@ Avalonffc@gmail.com  </div>
                         <div id="mail-icon">
                             <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom">info@avalon.in.ua       /   
-Avalonffc@gmail.com  </div>
+                        <div class="mail-adress-bottom"><a href="mailto:info@avalon.in.ua?subject=Logistic">info@avalon.in.ua</a>
+							<br><a href="mailto:avalonffc@gmail.com?subject=Logistic">avalonffc@gmail.com</a>
+						</div>
                     </div>
 
 
@@ -409,7 +328,7 @@ Avalonffc@gmail.com  </div>
                         <div id="phone-icon">
                             <img src="Images/telephone-icon.png" height="20" width="20" id="phone-icon-phone" />
                         </div>
-                        <div class="phone-number-bottom">Tel: +380 (44) 500-95-25 </div>
+                        <div class="phone-number-bottom"><a href="tel:+380445009525">+380 (44) 500-95-25</a></div>
                     </div>
                 </div>
             </div>
@@ -431,7 +350,6 @@ Avalonffc@gmail.com  </div>
 
 </body>
 
-<!-- Mirrored from avalon.in.ua/en-US by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:32:49 GMT -->
 </html>
 
 <style>
