--- a/ru-RU/Important.html
+++ b/ru-RU/Important.html
@@ -2,8 +2,7 @@
 
 <html>
 
-<!-- Mirrored from avalon.in.ua/ru-RU/Important by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:32:29 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>МЕЖДУНАРОДНЫЕ ПЕРЕВОЗКИ</title>
@@ -534,5 +533,4 @@ Avalonffc@gmail.com  </div>
 
 </body>
 
-<!-- Mirrored from avalon.in.ua/ru-RU/Important by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:32:48 GMT -->
 </html>
