--- a/ru-RU/Important.html
+++ b/ru-RU/Important.html
@@ -499,7 +499,7 @@
                         <div id="mail-icon">
                             <img src="../Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom">info@avalon.in.ua  
+                        <div class="mail-adress-bottom">info@avalonffc.com.ua  
 Avalonffc@gmail.com  </div>
                     </div>
 
