--- a/ru-RU/Important/SeaTransportation.html
+++ b/ru-RU/Important/SeaTransportation.html
@@ -2,7 +2,6 @@
 
 <html>
 
-<!-- Mirrored from avalon.in.ua/ru-RU/Important/SeaTransportation by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:33:19 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -134,7 +133,7 @@
 <p><strong>LCL</strong>&nbsp;&mdash;&nbsp;<strong>(less container loading)&nbsp;</strong>меньше чем целый контейнер, перевозка в&nbsp;одном контейнере груза для нескольких получателей;</p>
 <p><strong>FCL</strong>&nbsp;&mdash;&nbsp;<strong>(full container loading)</strong>&nbsp;полностью загруженный контейнер для одного получателя;</p>
 <p><strong>CBM&nbsp;&mdash; (</strong><strong>Cubic Metre)&nbsp;&mdash;&nbsp;</strong>кубический метр;</p>
-<p>Если у&nbsp;вас возникли вопросы, то&nbsp;обратитесь к&nbsp;нашим менеджерам: info@avalon.in.ua</p>
+<p>Если у&nbsp;вас возникли вопросы, то&nbsp;обратитесь к&nbsp;нашим менеджерам: info@avalonffc.com.ua</p>
 
 
 
@@ -493,7 +492,7 @@
                         <div id="mail-icon">
                             <img src="../../Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom">info@avalon.in.ua  
+                        <div class="mail-adress-bottom">info@avalonffc.com.ua  
 Avalonffc@gmail.com  </div>
                     </div>
 
@@ -527,5 +526,4 @@ Avalonffc@gmail.com  </div>
 
 </body>
 
-<!-- Mirrored from avalon.in.ua/ru-RU/Important/SeaTransportation by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:33:19 GMT -->
 </html>
