--- a/en-US.html
+++ b/en-US.html
@@ -160,7 +160,7 @@ The company offers a range of logistics services for the transportation of all t
                     <div id="mail-icon">
                         <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                     </div>
-                    <div id="mail-adress"><a href="mailto:info@avalon.in.ua?subject=Logistic">info@avalon.in.ua</a>
+                    <div id="mail-adress"><a href="mailto:info@avalonffc.com.ua?subject=Logistic">info@avalonffc.com.ua</a>
 					<br><a href="mailto:avalonffc@gmail.com?subject=Logistic">avalonffc@gmail.com</a>
 					</div>
                 </div>
@@ -314,7 +314,7 @@ The company offers a range of logistics services for the transportation of all t
                         <div id="mail-icon">
                             <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom"><a href="mailto:info@avalon.in.ua?subject=Logistic">info@avalon.in.ua</a>
+                        <div class="mail-adress-bottom"><a href="mailto:info@avalonffc.com.ua?subject=Logistic">info@avalonffc.com.ua</a>
 							<br><a href="mailto:avalonffc@gmail.com?subject=Logistic">avalonffc@gmail.com</a>
 						</div>
                     </div>
