--- a/en-US/Important/SeaTransportation.html
+++ b/en-US/Important/SeaTransportation.html
@@ -2,7 +2,6 @@
 
 <html>
 
-<!-- Mirrored from avalon.in.ua/en-US/Important/SeaTransportation by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:33:19 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -136,7 +135,7 @@
 <p><br /><strong>LCL</strong> - (less container loading) less than a whole container, shipping in one<br />container for multiple recipients;</p>
 <p><br /><strong>FCL</strong> - (full container loading) fully loaded container for one recipient;</p>
 <p><br /><strong>CBM</strong> - (Cubic Metre) - cubic meter;</p>
-<p><br />If you have any questions, please contact our managers: info@avalon.in.ua</p>
+<p><br />If you have any questions, please contact our managers: info@avalonffc.com.ua</p>
 <p>&nbsp;</p>
 
 
@@ -496,7 +495,7 @@
                         <div id="mail-icon">
                             <img src="../../Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom">info@avalon.in.ua       /   
+                        <div class="mail-adress-bottom">info@avalonffc.com.ua       /   
 Avalonffc@gmail.com  </div>
                     </div>
 
@@ -530,5 +529,4 @@ Avalonffc@gmail.com  </div>
 
 </body>
 
-<!-- Mirrored from avalon.in.ua/en-US/Important/SeaTransportation by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:33:19 GMT -->
 </html>
