--- a/ru-RU/Important/Dangerous.html
+++ b/ru-RU/Important/Dangerous.html
@@ -2,7 +2,6 @@
 
 <html>
 
-<!-- Mirrored from avalon.in.ua/ru-RU/Important/Dangerous by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:33:19 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -479,7 +478,7 @@
                         <div id="mail-icon">
                             <img src="../../Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom">info@avalon.in.ua  
+                        <div class="mail-adress-bottom">info@avalonffc.com.ua  
 Avalonffc@gmail.com  </div>
                     </div>
 
@@ -513,5 +512,4 @@ Avalonffc@gmail.com  </div>
 
 </body>
 
-<!-- Mirrored from avalon.in.ua/ru-RU/Important/Dangerous by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Sep 2021 10:33:19 GMT -->
 </html>
