--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div id="mail-icon">
                         <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                     </div>
-                    <div id="mail-adress"><a href="mailto:info@avalon.com.ua?subject=Logistic">info@avalon.com.ua</a>
+                    <div id="mail-adress"><a href="mailto:info@avalonffc.com.ua?subject=Logistic">info@avalonffc.com.ua</a>
 						<br><a href="mailto:avalonffc@gmail.com?subject=Logistic">avalonffc@gmail.com</a>
 					</div>
                 </div>
@@ -316,7 +316,7 @@
                         <div id="mail-icon">
                             <img src="Images/mail-icon.png" height="20" width="20" id="mail-icon-mail" />
                         </div>
-                        <div class="mail-adress-bottom"><a href="mailto:info@avalon.com.ua?subject=Logistic">info@avalon.com.ua</a>
+                        <div class="mail-adress-bottom"><a href="mailto:info@avalonffc.com.ua?subject=Logistic">info@avalonffc.com.ua</a>
 							<br><a href="mailto:avalonffc@gmail.com?subject=Logistic">avalonffc@gmail.com</a>
 						</div>
                     </div>
